--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^25.0.9",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
 }
