--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx tsc && ts-node dist/main.js"
+    "build": "tsc",
+    "start": "tsc && node dist/main.js"
   },
   "keywords": [],
   "author": "",
